[package]
name = "lldb"
version = "0.0.8"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Rust-like bindings to the public LLDB API. LLDB is the debugger from the LLVM project and is the system debugger on Mac OS X."
keywords = ["lldb", "debugger"]
categories = ["api-bindings", "development-tools::debugging"]
documentation = "https://endoli.github.io/lldb.rs/"
homepage = "https://github.com/endoli/lldb.rs"
repository = "https://github.com/endoli/lldb.rs"

[[example]]
name = "basic_synchronous"

[features]
graphql = ["juniper"]

[dependencies]
lldb-sys = "0.0.21"
juniper = { version = "0.10", optional = true }
