[package]
name = "lldb"
version = "0.0.10"
edition = "2021"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Rust-like bindings to the public LLDB API. LLDB is the debugger from the LLVM project and is the system debugger on macOS."
keywords = ["lldb", "debugger"]
categories = ["api-bindings", "development-tools::debugging"]
documentation = "https://endoli.github.io/lldb.rs/"
homepage = "https://github.com/endoli/lldb.rs"
repository = "https://github.com/endoli/lldb.rs"

[[example]]
name = "basic_synchronous"

[features]
graphql = ["juniper"]

[dependencies]
libc = "0.2"
lldb-sys = "0.0.29"
juniper = { version = "0.15", optional = true }
