[package]
name = "lldb"
version = "0.0.11"
edition = "2021"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Rust-like bindings to the public LLDB API. LLDB is the debugger from the LLVM project and is the system debugger on macOS."
keywords = ["lldb", "debugger"]
categories = ["api-bindings", "development-tools::debugging"]
documentation = "https://docs.rs/lldb/latest/lldb/"
homepage = "https://github.com/endoli/lldb.rs"
repository = "https://github.com/endoli/lldb.rs"

[[example]]
name = "basic_synchronous"

[features]
graphql = ["juniper"]

[dependencies]
libc = "0.2"
lldb-sys = "0.0.30"
juniper = { version = "0.15", optional = true }
